fix header too close

--- a/css/styles.css
+++ b/css/styles.css
@@ -38,21 +38,21 @@ a:hover {
 }
 
 .under-hover:before {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 2px;
-  bottom: 12px;
-  left: 0;
-  background-color: #000000;
-  visibility: hidden;
-  transform: scaleX(0);
-  transition: all 0.35s ease-in-out 0s;
+    content: "";
+    position: absolute;
+    width: 90%;
+    height: 2px;
+    bottom: 15px;
+    left: 38px;
+    background-color: #000000;
+    visibility: hidden;
+    transform: scaleX(0);
+    transition: all 0.35s ease-in-out 0s;
 }
 
 .under-hover:hover:before {
     visibility: visible;
-    transform: scaleX(1.1);
+    transform: scaleX(0.9);
 }
 
 /* Borders */
@@ -136,6 +136,7 @@ section:first-of-type {
 
 .right-nav li {
     float: right;
+    text-indent: 50px;
 }
 
 .right-nav li a {
@@ -144,3 +145,4 @@ section:first-of-type {
     padding: 10px 30px;
     top: 10px;
 }
+
